--- a/Components/02-Card-sprint/cards/index.html
+++ b/Components/02-Card-sprint/cards/index.html
@@ -9,11 +9,27 @@
   </head>
   <body>
 
-    <div class="card-category"></div>
-
-    <div class="card-product"></div>
-
-    <div class="card-trip"></div>
-
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1495214783159-3503fd1b572d?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1500&amp;q=80)">
+          Breakfast
+    </div>
+    <br> <!-- single line break -->
+    <div class="card-product">
+      <img src="https://images.unsplash.com/photo-1531565637446-32307b194362?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2452&amp;q=80">
+      <div class="card-product-infos">
+        <h2>Product name</h2>
+        <p>Product description with relevant info only</p>
+      </div>
+    </div>
+    <br>
+    <div class="card-trip">
+      <img src="https://images.unsplash.com/photo-1522787345986-d5c7885a889e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1500&amp;q=80">
+      <div class="card-trip-infos"></div>
+        <div>
+          <h2>Title here</h2>
+          <p>Short description here!</p>
+        </div>
+        <h2 class="card-trip-pricing">£99.99</h2>
+        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered">
+    </div>
   </body>
 </html>
